--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ configurations {
 
 dependencies {
     runtime('mysql:mysql-connector-java')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'org.springframework.data:spring-data-jpa:2.0.6.RELEASE'
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '3.0'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
